--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>calculator</title>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=MuseoModerno:wght@300;400&display=swap" rel="stylesheet">
 
-
+	
     <style>
 
 body {
@@ -25,7 +25,7 @@ body {
 
 a,
 a:visited  {
-  color: goldenrod;
+  color: red;
 }
 
 .dark {
