--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ var buttons = document.getElementsByClassName("button");
   Array.prototype.forEach.call(buttons, function(button) {
   button.addEventListener("click", function() {
     if (button.textContent != "=" && 
-    button.textContent != "AC" && 
+    button.textContent != "C" && 
     button.textContent != "*" && 
     button.textContent != "/" && 
     button.textContent != "√" && 
