--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ var buttons = document.getElementsByClassName("button");
       display.value += button.textContent;
     } else if (button.textContent === "=") {
       equals();
-    } else if (button.textContent === "AC") {
+    } else if (button.textContent === "C") {
       clear();
     } else if (button.textContent === "*") {
       multiply();
