--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ var buttons = document.getElementsByClassName("button");
   Array.prototype.forEach.call(buttons, function(button) {
   button.addEventListener("click", function() {
     if (button.textContent != "=" && 
-    button.textContent != "C" && 
+    button.textContent != "AC" && 
     button.textContent != "*" && 
     button.textContent != "/" && 
     button.textContent != "√" && 
@@ -230,7 +230,7 @@ var buttons = document.getElementsByClassName("button");
       display.value += button.textContent;
     } else if (button.textContent === "=") {
       equals();
-    } else if (button.textContent === "C") {
+    } else if (button.textContent === "AC") {
       clear();
     } else if (button.textContent === "*") {
       multiply();
